syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/ssl/ssl.proto";
import "validate/validate.proto";

/*

    Failover configuration for an upstream.

    Failover allows for optional fallback endpoints in the case that the primary set of endpoints is deemed
    unhealthy. As failover requires knowledge of the health of each set of endpoints, active or passive
    health checks must be configured on an upstream using failover in order for it to work properly.

    Failover closely resembles the Envoy config which this is translated to, with one notable exception.
    The priorities are not defined on the `LocalityLbEndpoints` but rather inferred from the list of
    `PrioritizedLocality`. More information on envoy prioritization can be found
    [here](https://www.envoyproxy.io/docs/envoy/v1.14.1/intro/arch_overview/upstream/load_balancing/priority#arch-overview-load-balancing-priority-levels).
    In practice this means that the priority of a given set of `LocalityLbEndpoints` is determined by its index in
    the list, first being `0` through `n-1`.

*/
message Failover {
    // PrioritizedLocality is an implicitly prioritized list of lists of `LocalityLbEndpoints`. The priority of each
    // list of `LocalityLbEndpoints` is determined by its index in the list.
    repeated PrioritizedLocality prioritized_localities = 1;

    message PrioritizedLocality {
        repeated LocalityLbEndpoints locality_endpoints = 2;
    }

    // Load balancing policy settings.
    Policy policy = 2;

    message Policy {
      // Priority levels and localities are considered overprovisioned with this
      // factor (in percentage). This means that we don't consider a priority
      // level or locality unhealthy until the fraction of healthy hosts
      // multiplied by the overprovisioning factor drops below 100.
      // With the default value 140(1.4), Envoy doesn't consider a priority level
      // or a locality unhealthy until their percentage of healthy hosts drops
      // below 72%. For example:
      //
      // .. code-block:: json
      //
      //  { "overprovisioning_factor": 100 }
      //
      // Read more at priority levels and
      // localities.
      google.protobuf.UInt32Value overprovisioning_factor = 1 [(validate.rules).uint32 = {gt: 0}];
    }
}

// A group of endpoints belonging to a Locality.
// One can have multiple LocalityLbEndpoints for a locality, but this is
// generally only done if the different groups need to have different load
// balancing weights or different priorities.
message LocalityLbEndpoints {

    // Identifies where the parent upstream hosts run.
    Locality locality = 1;

    // The group of endpoints belonging to the locality specified.
    // Note: If any address is DNS resolvable than `lb_endpoints[].load_balancing_weight` is not allowed on any of
    // this locality's endpoints.
    repeated LbEndpoint lb_endpoints = 2;

    // Optional: Per priority/region/zone/sub_zone weight; at least 1. The load
    // balancing weight for a locality is divided by the sum of the weights of all
    // localities at the same priority level to produce the effective percentage
    // of traffic for the locality.
    // To enable locality weighted load balancing, load_balancer_config.locality_weighted_lb_config must be set as well
    google.protobuf.UInt32Value load_balancing_weight = 3;
}


// An Endpoint that Envoy can route traffic to.
message LbEndpoint {


    // Address (hostname or IP)
    string address = 1;
    // Port the instance is listening on
    uint32 port = 2;

    // The optional health check configuration is used as configuration for the
    // health checker to contact the health checked host.
    // This takes into effect only for upstreams with active health checking enabled
    HealthCheckConfig health_check_config = 3;

    // The optional health check configuration.
    message HealthCheckConfig {
        // Optional alternative health check port value.
        //
        // By default the health check address port of an upstream host is the same
        // as the host's serving address port. This provides an alternative health
        // check port. Setting this with a non-zero value allows an upstream host
        // to have different health check address port.
        uint32 port_value = 1;

        // By default, the host header for L7 health checks is controlled by cluster level configuration. Setting this
        // to a non-empty value allows overriding the cluster level configuration for a specific endpoint.
        string hostname = 2;

        // Path to use when health checking this failover endpoint.
        // Default is empty path.
        string path = 3;
        // Method to use when health checking this failover endpoint. Defaults to `GET`.
        string method = 4;
    }

    .gloo.solo.io.UpstreamSslConfig upstream_ssl_config = 4;

    // The optional load balancing weight of the upstream host; at least 1.
    // Envoy uses the load balancing weight in some of the built in load
    // balancers. The load balancing weight for an endpoint is divided by the sum
    // of the weights of all endpoints in the endpoint's locality to produce a
    // percentage of traffic for the endpoint. This percentage is then further
    // weighted by the endpoint's locality's load balancing weight from
    // LocalityLbEndpoints. If unspecified, each host is presumed to have equal
    // weight in a locality.
    google.protobuf.UInt32Value load_balancing_weight = 5 [(validate.rules).uint32.gte = 1];

    // Additional metadata to add to the endpoint. This metadata can be used in upstream HTTP filters
    // or other specific Envoy configurations.
    // The following keys are added by Gloo Edge and are ignored if set:
    // - "envoy.transport_socket_match"
    // - "io.solo.health_checkers.advanced_http"
    map<string, google.protobuf.Struct> metadata = 6;
}

// Identifies location of where either Envoy runs or where upstream hosts run.
message Locality {
    // Region this zone belongs to.
    string region = 1;

    // Defines the local service zone where Envoy is running. The meaning of zone
    // is context dependent, e.g. [Availability Zone (AZ)](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html)
    // on AWS, [Zone](https://cloud.google.com/compute/docs/regions-zones/) on
    // GCP, etc.
    string zone = 2;

    // When used for locality of upstream hosts, this field further splits zone
    // into smaller chunks of sub-zones so they can be load balanced
    // independently.
    string sub_zone = 3;
}